--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ nav ul li {
 }
 
 nav ul li a {
-    color: #fff;
+    color: #6a6a6a;
     text-decoration: none;
 }
 
@@ -104,7 +104,7 @@ ul {
 }
 
 ul li {
-    border-bottom: 5px solid #6a6a6a;
+    border-bottom: 2px solid #6a6a6a;
     padding: 10px 0;
 }
 
